feat: enhance ContactQueryService with improved logging and access control